--- a/playbooks/roles/info_snowflake/tasks/version.yaml
+++ b/playbooks/roles/info_snowflake/tasks/version.yaml
@@ -6,7 +6,7 @@
   changed_when: false
   failed_when: (_proxy_version.stdout_lines | length != 1) or (_proxy_version.stderr_lines | length > 0)
   ansible.builtin.shell:
-    cmd: |
+    cmd: |-
       /usr/bin/snowflake-proxy --version 2>&1 |
       cut -f 2- -d ' ' |
       tr ' ' '_'
