--- a/playbooks/roles/info_snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info_snowflake/tasks/connections.yaml
@@ -2,7 +2,7 @@
 - name: Get last 30 connections (sorted from newest to oldest)
   changed_when: false
   ansible.builtin.shell:
-    cmd: |
+    cmd: |-
       journalctl -u snowflake-proxy --since "1 hour ago" -r -g ', there were .* connections' -q |
       tail -n 30 |
       awk '{ print $14 }' |
