--- a/playbooks/roles/info_tor/tasks/log-err.yaml
+++ b/playbooks/roles/info_tor/tasks/log-err.yaml
@@ -3,7 +3,7 @@
   changed_when: false
   failed_when: _result.stderr_lines | length > 0
   ansible.builtin.shell:
-    cmd: |
+    cmd: |-
       grep -h -v -e 'opening .*log file.' {{ log_err }}.1 {{ log_err }} 2>/dev/null |
       tail -n {{ log_lines }}
   register: _result
