--- a/playbooks/roles/info/tasks/metrics.yaml
+++ b/playbooks/roles/info/tasks/metrics.yaml
@@ -1,4 +1,16 @@
 ---
+- name: Gather facts
+  ansible.builtin.setup:
+    gather_subset: "{{ facts_subset }}"
+
+- name: Validate ipv6 address
+  ansible.builtin.assert:
+    quiet: true
+    that:
+      - "ansible_facts.default_ipv6.address is defined"
+      - "ansible_facts.default_ipv6.address is not match('fe80::')"
+      - "ansible_facts.default_ipv6.address is not search('::1$')"
+
 - name: File metrics port
   delegate_to: localhost
   throttle: 1
