--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -13,3 +13,5 @@ nickname: ""
 publish_server_descriptor: "{{ (bridge_distribution | length > 0) | ternary('bridge', '') }}"
 
 tor_config_local: []
+
+tor_metrics: false
