--- a/playbooks/roles/setup_tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-debian.yaml
@@ -52,27 +52,27 @@
         path: /etc/apt/apt.conf.d/99-tor-capability
         create: yes
 
-    - name: Ensure that systemd override dir exists
-      ansible.builtin.file:
-        path: /etc/systemd/system/tor@default.service.d/
-        state: directory
+- name: Ensure that systemd override dir exists
+  ansible.builtin.file:
+    path: /etc/systemd/system/tor@default.service.d/
+    state: directory
 
-    - name: Override systemd defaults for Tor
-      ansible.builtin.blockinfile:
-        create: true
-        dest: /etc/systemd/system/tor@default.service.d/override.conf
-        block: |
-          [Service]
-          NoNewPrivileges=no
-      notify: "Restart Tor"
+- name: Override systemd defaults for Tor
+  ansible.builtin.blockinfile:
+    create: true
+    dest: /etc/systemd/system/tor@default.service.d/override.conf
+    block: |
+      [Service]
+      NoNewPrivileges=no
+  notify: "Restart Tor"
 
-    - name: Handle low memory
-      when: ansible_facts.memtotal_mb < 1024
-      ansible.builtin.lineinfile:
-        line: "MemoryHigh=700MB"
-        path: /etc/systemd/system/tor@default.service.d/override.conf
-        insertafter: "NoNewPrivileges=no"
-      notify: "Restart Tor"
+- name: Override systemd defaults to handle low memory
+  when: ansible_facts.memtotal_mb < 1024
+  ansible.builtin.lineinfile:
+    line: "MemoryHigh=700MB"
+    path: /etc/systemd/system/tor@default.service.d/override.conf
+    insertafter: "NoNewPrivileges=no"
+  notify: "Restart Tor"
 
 - name: Set sysctl max user namespaces
   ansible.posix.sysctl:
