overhaul systemd override

--- a/playbooks/roles/setup_snowflake/tasks/snowflake-debian.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-debian.yaml
@@ -11,19 +11,8 @@
     path: /etc/systemd/system/snowflake-proxy.service.d/
     state: directory
 
-- name: Override systemd defaults
-  ansible.builtin.blockinfile:
-    create: true
+- name: Add systemd override
+  ansible.builtin.template:
+    src: override.conf.j2
     dest: /etc/systemd/system/snowflake-proxy.service.d/override.conf
-    block: |
-      [Service]
-      NoNewPrivileges=no
-  notify: "Restart Snowflake"
-
-- name: Override systemd defaults to handle low memory
-  when: ansible_facts.memtotal_mb < 1024
-  ansible.builtin.lineinfile:
-    line: "MemoryHigh=700MB"
-    path: /etc/systemd/system/snowflake-proxy.service.d/override.conf
-    insertafter: "NoNewPrivileges=no"
   notify: "Restart Snowflake"
