--- a/playbooks/roles/setup_tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-debian.yaml
@@ -59,7 +59,7 @@
 
 - name: Add systemd override
   ansible.builtin.template:
-    src: override.conf.j2
+    src: tor.override.conf.j2
     dest: /etc/systemd/system/tor@default.service.d/override.conf
   notify: "Restart Tor"
 
