--- a/playbooks/roles/setup_snowflake/tasks/snowflake-debian.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-debian.yaml
@@ -6,13 +6,16 @@
       - snowflake-proxy
   notify: "Restart Snowflake"
 
-- name: Ensure that systemd override dir exists
+- name: Ensure that Snowflake systemd override dir exists
   ansible.builtin.file:
     path: /etc/systemd/system/snowflake-proxy.service.d/
     state: directory
+    mode: "0755"
 
-- name: Add systemd override
+- name: Add Snowflake systemd override
   ansible.builtin.template:
-    src: override.conf.j2
+    src: snowflake.override.conf.j2
     dest: /etc/systemd/system/snowflake-proxy.service.d/override.conf
-  notify: "Restart Snowflake"
+  notify:
+    - "Reload Systemd"
+    - "Restart Snowflake"
