--- a/playbooks/roles/setup/handlers/main.yaml
+++ b/playbooks/roles/setup/handlers/main.yaml
@@ -1,4 +1,10 @@
 ---
+- name: Reload Systemd
+  when: not ansible_check_mode
+  listen: "Reload Systemd"
+  ansible.builtin.systemd_service:
+    daemon_reload: true
+
 - name: Restart Nginx
   when: not ansible_check_mode
   listen: "Restart Nginx"
