--- a/playbooks/roles/setup/tasks/base.yaml
+++ b/playbooks/roles/setup/tasks/base.yaml
@@ -51,3 +51,16 @@
   loop:
     - { name: "vm.swappiness", value: 5 } # only use swap space when 95% or more of physical RAM is used up
     - { name: "kernel.sysrq", value: 0 }
+
+- name: Ensure that Logrotate systemd override dir exists
+  ansible.builtin.file:
+    path: /etc/systemd/system/logrotate.timer.d/
+    state: directory
+    mode: "0755"
+
+- name: Add Logrotate systemd override
+  ansible.builtin.template:
+    src: logrotate.override.conf.j2
+    dest: /etc/systemd/system/logrotate.timer.d/override.conf
+  notify:
+    - "Reload Systemd"
