--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -6,20 +6,7 @@
   notify:
     - "Reload Tor"
 
-- name: Ensure that Logrotate systemd override dir exists
-  ansible.builtin.file:
-    path: /etc/systemd/system/logrotate.timer.d/
-    state: directory
-    mode: "0755"
-
-- name: Add Logrotate systemd override
-  ansible.builtin.template:
-    src: logrotate.override.conf.j2
-    dest: /etc/systemd/system/logrotate.timer.d/override.conf
-  notify:
-    - "Reload Systemd"
-
-- name: Add Logrotate config
+- name: Add Tor logrotate config
   ansible.builtin.template:
     src: logrotate.tor.j2
     dest: /etc/logrotate.d/tor
