--- a/playbooks/roles/info/tasks/log-system.yaml
+++ b/playbooks/roles/info/tasks/log-system.yaml
@@ -2,11 +2,12 @@
 - name: Grep system log since {{ log_system_since }}
   changed_when: false
   failed_when: _result.stderr_lines | length > 0
-  ansible.builtin.command:
-    cmd: >-
-      journalctl
-      -g 'BUG:' -g 'Call Trace:' -g 'OOM' -g 'oom' -g 'RIP:' -g 'WARNING:' -g 'status=9/KILL' -g '.service: Failed'
-      --since "{{ log_system_since }}" -q
+  ansible.builtin.shell:
+    cmd: |-
+      journalctl \
+        -g 'BUG:' -g 'Call Trace:' -g 'OOM' -g 'oom' -g 'RIP:' -g 'WARNING:' -g 'status=9/KILL' -g '.service: Failed' -g 'Out of memory:' \
+        --since "{{ log_system_since }}" -q |
+      tail -n 10
   register: _result
 
 - name: Findings of log-system since {{ log_system_since }}
