--- a/inventory/group_vars/tor.yaml
+++ b/inventory/group_vars/tor.yaml
@@ -5,12 +5,10 @@ log_err: "/var/log/tor/err.log"
 
 torrc_config:
   - name: "BridgeDistribution"
-    value: "{{ bridge_distribution | default('') }}"
+    value: "{{ bridge_distribution }}"
   - name: "Log notice file"
     value: "{{ log_notice }}"
   - name: "Log warn file"
     value: "{{ log_warn }}"
   - name: "Log err file"
     value: "{{ log_err }}"
-  - name: "PublishServerDescriptor"
-    value: "{{ publish_server_descriptor | default('') }}"
