separate OS uptime from app, added process start time too

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -35,3 +35,8 @@
   ansible.builtin.import_tasks: uname.yaml
   tags:
     - uname
+
+- name: Uptime
+  ansible.builtin.import_tasks: uptime.yaml
+  tags:
+    - uptime
