--- a/playbooks/roles/info_snowflake/tasks/uptime.yaml
+++ b/playbooks/roles/info_snowflake/tasks/uptime.yaml
@@ -4,17 +4,24 @@
     name: snowflake-proxy
   register: _service
 
-- name: Uptime
+- name: Get process start time
   changed_when: false
-  failed_when: (_result.stdout_lines | length != 1) or (_result.stderr_lines | length > 0)
-  ansible.builtin.command: uptime -ps
-  register: _result
+  failed_when: (_process.stdout_lines | length != 1) or (_process.stderr_lines | length > 0)
+  ansible.builtin.shell:
+    cmd: |-
+      ps -eo lstart,cmd --no-headers |
+        grep /usr/bin/snowflake-proxy |
+        grep -v grep |
+        cut -f 1,3,4 -d ' '
+  register: _process
 
 - name: File uptime
   delegate_to: localhost
   throttle: 1
+  vars:
+    __starttime: "{{ _service.status.ExecMainStartTimestamp | default('-') }}"
+    __changetime: "{{ _service.status.StateChangeTimestamp | default('-') }}"
   ansible.builtin.lineinfile:
-    create: yes
-    line: "{{ inventory_hostname }} SFStart {{ _service.status.ExecMainStartTimestamp }} SFReload {{ _service.status.StateChangeTimestamp }} uptime {{ _result.stdout }}"
+    line: "{{ inventory_hostname }} Restart {{ _process.stdout }} Change {{ __changetime }} Start {{ __starttime }}"
     path: "{{ tmp_dir }}/snowflake_uptime"
     regex: "^{{ inventory_hostname }} "
