--- a/playbooks/roles/info_tor/tasks/uptime.yaml
+++ b/playbooks/roles/info_tor/tasks/uptime.yaml
@@ -9,10 +9,10 @@
   failed_when: (_process.stdout_lines | length != 1) or (_process.stderr_lines | length > 0)
   ansible.builtin.shell:
     cmd: |-
-      ps -eo lstart,cmd --no-headers |
+      ps -eo etime,cmd --no-headers |
         grep /usr/bin/tor |
         grep -v grep |
-        cut -f 1,3,4 -d ' '
+        awk '{ print $1 }'
   register: _process
 
 - name: File uptime
@@ -22,6 +22,6 @@
     __starttime: "{{ _service.status.ExecMainStartTimestamp | default('-') }}"
     __changetime: "{{ _service.status.StateChangeTimestamp | default('-') }}"
   ansible.builtin.lineinfile:
-    line: "{{ inventory_hostname }} Restart {{ _process.stdout }} Change {{ __changetime }} Start {{ __starttime }}"
+    line: "{{ inventory_hostname }} etime {{ _process.stdout }} Change {{ __changetime }} Start {{ __starttime }}"
     path: "{{ tmp_dir }}/tor_uptime"
     regex: "^{{ inventory_hostname }} "
