--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -21,7 +21,7 @@
       owner: root
       group: root
       mode: "0755"
-    ansible.builtin.service:
+    ansible.builtin.systemd_service:
       daemon_reload: true
       enabled: true
   block:
