--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -34,13 +34,13 @@
       owner: root
       group: root
       mode: "0644"
-    ansible.builtin.service:
-      daemon_reload: true
-      enabled: true
     ansible.builtin.stat:
       get_attributes: false
       get_checksum: false
       get_mime: false
+    ansible.builtin.systemd_service:
+      daemon_reload: true
+      enabled: true
     ansible.builtin.template:
       owner: root
       group: root
