--- a/playbooks/roles/setup_tor/handlers/main.yaml
+++ b/playbooks/roles/setup_tor/handlers/main.yaml
@@ -20,13 +20,13 @@
 - name: Restart Tor
   when: not ansible_check_mode
   listen: "Restart Tor"
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     name: tor
     state: restarted
 
 - name: Reload Tor
   when: not ansible_check_mode
   listen: "Reload Tor"
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     name: tor
     state: reloaded
