--- a/playbooks/roles/setup/tasks/metrics.yaml
+++ b/playbooks/roles/setup/tasks/metrics.yaml
@@ -77,6 +77,20 @@
           - prometheus-node-exporter
       notify: "Restart Prometheus node exporter"
 
+    # needed if manually disabled in the past
+    - name: Enable Prometheus node exporter at boot
+      when: not ansible_check_mode
+      ansible.builtin.systemd_service:
+        name: prometheus-node-exporter
+      notify: "Restart Prometheus node exporter"
+
+    - name: Create Prometheus node exporter data directory
+      ansible.builtin.file:
+        path: /var/lib/node_exporter/
+        state: directory
+        mode: "0755"
+      notify: "Restart Prometheus node exporter"
+
     - name: Configure Prometheus node exporter
       ansible.builtin.lineinfile:
         create: no
@@ -90,9 +104,3 @@
         path: /etc/default/prometheus-node-exporter
         regex: "^ARGS="
       notify: "Restart Prometheus node exporter"
-
-    - name: Create Prometheus node exporter data directory
-      ansible.builtin.file:
-        path: /var/lib/node_exporter/
-        state: directory
-        mode: "0755"
