--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -2,8 +2,6 @@
 - name: Gather facts
   ansible.builtin.setup:
     gather_subset: "{{ facts_subset }}"
-  tags:
-    - always
 
 - name: Validate
   ansible.builtin.import_tasks: validate.yaml
@@ -75,7 +73,7 @@
         var: ansible_facts.default_ipv6
         verbosity: 1
       tags:
-        - always
+        - ipv6
 
     - name: Firewall
       when: firewall_base_config
