--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -69,6 +69,11 @@
           tags:
             - lyrebird
 
+    - name: Enable Tor at boot
+      when: not ansible_check_mode
+      ansible.builtin.systemd_service:
+        name: tor
+
     - name: Config
       ansible.builtin.import_tasks: config.yaml
       tags:
