restart service if it was disabled

--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -57,5 +57,6 @@
       when: not ansible_check_mode
       ansible.builtin.systemd_service:
         name: snowflake-proxy
+      notify: "Restart Snowflake"
       tags:
         - snowflake
