--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -73,6 +73,7 @@
       when: not ansible_check_mode
       ansible.builtin.systemd_service:
         name: tor
+      notify: "Restart Tor"
 
     - name: Config
       ansible.builtin.import_tasks: config.yaml
