--- a/playbooks/roles/info_tor/tasks/bridgeline.yaml
+++ b/playbooks/roles/info_tor/tasks/bridgeline.yaml
@@ -2,8 +2,11 @@
 - name: Get certificate
   when: bridge_distribution | length > 0
   changed_when: false
-  failed_when: (_cert.stdout_lines | length != 1) or (_cert.stderr_lines | length > 0)
-  ansible.builtin.command: grep -Eo 'cert=\S+' /var/lib/tor/pt_state/obfs4_bridgeline.txt
+  ansible.builtin.shell:
+    cmd: |-
+      grep -Eo 'cert=\S+' /var/lib/tor/pt_state/obfs4_bridgeline.txt |
+      grep . ||
+      echo "-"
   register: _cert
 
 - name: File bridgeline
