--- a/playbooks/roles/info_tor/tasks/uptime.yaml
+++ b/playbooks/roles/info_tor/tasks/uptime.yaml
@@ -6,13 +6,14 @@
 
 - name: Get process start time
   changed_when: false
-  failed_when: (_process.stdout_lines | length != 1) or (_process.stderr_lines | length > 0)
   ansible.builtin.shell:
     cmd: |-
       ps -eo etime,cmd --no-headers |
         grep /usr/bin/tor |
         grep -v grep |
-        awk '{ print $1 }'
+        awk '{ print $1 }'|
+        grep . ||
+        echo "-"
   register: _process
 
 - name: File uptime
