--- a/playbooks/roles/info_snowflake/tasks/version.yaml
+++ b/playbooks/roles/info_snowflake/tasks/version.yaml
@@ -4,12 +4,13 @@
 
 - name: Snowflake version
   changed_when: false
-  failed_when: (_proxy_version.stdout_lines | length != 1) or (_proxy_version.stderr_lines | length > 0)
   ansible.builtin.shell:
     cmd: |-
-      /usr/bin/snowflake-proxy --version 2>&1 |
+      snowflake-proxy --version 2>&1 |
       cut -f 2- -d ' ' |
-      tr ' ' '_'
+      tr ' ' '_' |
+      grep . ||
+      echo "-"
   register: _proxy_version
 
 - name: File version
@@ -19,6 +20,6 @@
     __package: "{{ ansible_facts.packages['snowflake-proxy'][0].version | default('-') }}"
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ inventory_hostname }} sf {{ _proxy_version.stdout_lines[0] }} {{ __package }}"
+    line: "{{ inventory_hostname }} sf {{ _proxy_version.stdout }} {{ __package }}"
     path: "{{ tmp_dir }}/snowflake_version"
     regex: "^{{ inventory_hostname }} "
