new: check for unattended updates

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -36,6 +36,11 @@
   tags:
     - uname
 
+- name: Update
+  ansible.builtin.import_tasks: update.yaml
+  tags:
+    - update
+
 - name: Uptime
   ansible.builtin.import_tasks: uptime.yaml
   tags:
