--- a/playbooks/roles/info/tasks/update.yaml
+++ b/playbooks/roles/info/tasks/update.yaml
@@ -1,10 +1,10 @@
 ---
-- name: Dry-run of unattended-upgrade
+- name: Dry run of unattended-upgrade
   changed_when: false
-  ansible.builtin.command: unattended-upgrade -d
+  ansible.builtin.command: unattended-upgrade -d --dry-run
   register: _result
 
-- name: Findings of f unattended-upgrade
-  when: _result.stdout_lines is not search("No packages found that can be upgraded unattended and no pending auto-removals")
+- name: Output of unattended-upgrade dry run
+  when: _result.stdout_lines | length > 0
   ansible.builtin.debug:
     var: _result.stdout_lines
